Fix chart visibility

--- a/src/modules/blockchainApplication/explore/components/BlockchainApplicationStatistics/blockchainApplicationStatistics.css
+++ b/src/modules/blockchainApplication/explore/components/BlockchainApplicationStatistics/blockchainApplicationStatistics.css
@@ -49,6 +49,7 @@
 .chart {
   position: relative;
   width: calc(100% - 10px);
+  min-height: 120px;
 }
 
 .chartGuides {
